--- a/putty.ini
+++ b/putty.ini
@@ -1,4 +1,3 @@
-
 [Generic]
 UseIniFile=1
 
@@ -39,7 +38,7 @@ VKey121=\033[21~,\033[21;2~,\033[21;5~,\033[21;6~,\033[21;3~,\033[21;4~,\033[21;
 VKey122=\033[23~,\033[23;2~,\033[23;5~,\033[23;6~,\033[23;3~,\033[23;4~,\033[23;7~,\033[23;8~
 VKey123=\033[24~,\033[24;2~,\033[24;5~,\033[24;6~,\033[24;3~,\033[24;4~,\033[24;7~,\033[24;8~
 Present=1
-HostName=""
+HostName="localhost"
 LogFileName="putty.log"
 LogType=0
 LogFileClash=-1
@@ -47,14 +46,14 @@ LogFlush=1
 SSHLogOmitPasswords=1
 SSHLogOmitData=0
 Protocol="telnet"
-PortNumber=4242
+PortNumber=23
 CloseOnExit=1
 WarnOnClose=1
 PingInterval=0
 PingIntervalSecs=0
 TCPNoDelay=1
 TCPKeepalives=0
-TerminalType="xterm-256color"
+TerminalType="xterm"
 TerminalSpeed="38400,38400"
 TerminalModes="CS7=A,CS8=A,DISCARD=A,DSUSP=A,ECHO=A,ECHOCTL=A,ECHOE=A,ECHOK=A,ECHOKE=A,ECHONL=A,EOF=A,EOL=A,EOL2=A,ERASE=A,FLUSH=A,ICANON=A,ICRNL=A,IEXTEN=A,IGNCR=A,IGNPAR=A,IMAXBEL=A,INLCR=A,INPCK=A,INTR=A,ISIG=A,ISTRIP=A,IUCLC=A,IXANY=A,IXOFF=A,IXON=A,KILL=A,LNEXT=A,NOFLSH=A,OCRNL=A,OLCUC=A,ONLCR=A,ONLRET=A,ONOCR=A,OPOST=A,PARENB=A,PARMRK=A,PARODD=A,PENDIN=A,QUIT=A,REPRINT=A,START=A,STATUS=A,STOP=A,SUSP=A,SWTCH=A,TOSTOP=A,WERASE=A,XCASE=A"
 AddressFamily=0
@@ -77,8 +76,8 @@ TryAgent=1
 AgentFwd=0
 GssapiFwd=0
 ChangeUsername=0
-Cipher="aes,blowfish,3des,WARN,arcfour,des"
-KEX="dh-gex-sha1,dh-group14-sha1,dh-group1-sha1,rsa,WARN"
+Cipher="aes,blowfish,3des,WARN,arcfour,des,chacha20"
+KEX="ecdh,dh-gex-sha1,dh-group14-sha1,dh-group1-sha1,rsa,WARN"
 RekeyTime=60
 RekeyBytes="1G"
 SshNoAuth=0
@@ -98,7 +97,7 @@ RFCEnviron=0
 PassiveTelnet=0
 BackspaceIsDelete=0
 RXVTHomeEnd=0
-LinuxFunctionKeys=0
+LinuxFunctionKeys=2
 NoApplicationKeys=0
 NoApplicationCursors=0
 NoMouseReporting=0
@@ -114,11 +113,8 @@ NetHackKeypad=0
 AltF4=1
 AltSpace=0
 AltOnly=0
-AltMetaBit=0
-CtrlTabSwitch=0
 ComposeKey=0
 CtrlAltKeys=1
-RightAltKey=0
 TelnetKey=0
 TelnetRet=1
 LocalEcho=2
@@ -128,10 +124,9 @@ AlwaysOnTop=0
 FullScreenOnAltEnter=0
 HideMousePtr=0
 SunkenEdge=0
-IconFile=""
 WindowBorder=1
 CurType=2
-BlinkCur=1
+BlinkCur=0
 Beep=1
 BeepInd=0
 BellWaveFile=""
@@ -139,33 +134,56 @@ BellOverload=1
 BellOverloadN=5
 BellOverloadT=2000
 BellOverloadS=5000
-ScrollbackLines=20000
+ScrollbackLines=2000
 DECOriginMode=0
 AutoWrapMode=1
 LFImpliesCR=0
 CRImpliesLF=0
 DisableArabicShaping=0
 DisableBidi=0
+ClipModify=0
+ClipQuery=0
 WinNameAlways=1
 WinTitle=""
-TermWidth=132
+TermWidth=110
 TermHeight=40
-TermX=-2147483648
-TermY=-2147483648
-Font="ï¿½lï¿½r ï¿½Sï¿½Vï¿½bï¿½N"
+Font="‚l‚r ƒSƒVƒbƒN"
 FontIsBold=0
 FontCharSet=0
-FontHeight=10
-FontQuality=0
+FontHeight=11
+FontQuality=3
 FontVTMode=4
 UseSystemColours=0
 TryPalette=0
 ANSIColour=1
 Xterm256Colour=1
 BoldAsColour=0
+Colour0="211,208,200"
+Colour1="242,240,236"
+Colour2="45,45,45"
+Colour3="85,85,85"
+Colour4="116,115,105"
+Colour5="0,255,0"
+Colour6="45,45,45"
+Colour7="116,115,105"
+Colour8="242,119,122"
+Colour9="249,145,87"
+Colour10="153,204,153"
+Colour11="57,57,57"
+Colour12="255,204,102"
+Colour13="81,81,81"
+Colour14="102,153,204"
+Colour15="160,159,147"
+Colour16="204,153,204"
+Colour17="232,230,223"
+Colour18="102,204,204"
+Colour19="210,123,83"
+Colour20="211,208,200"
+Colour21="242,240,236"
+Colour22="0,0,0"
+Colour23="255,0,0"
 RawCNP=0
 PasteRTF=0
-IgnoreChars=""
 MouseIsXterm=0
 RectSelect=0
 MouseOverride=1
@@ -182,7 +200,6 @@ CJKAmbigWide=0
 UTF8Override=1
 Printer=""
 CapsLockCyr=0
-Use5Casis=0
 ScrollBar=1
 ScrollBarFullScreen=0
 ScrollOnKey=0
@@ -208,20 +225,22 @@ BugRSAPad2=0
 BugPKSessID2=0
 BugRekey2=0
 BugMaxPkt2=0
+BugWinadj=0
+BugChanReq=0
 StampUtmp=1
 LoginShell=1
 ScrollbarOnLeft=0
 BoldFont=""
-BoldFontIsBold=0
-BoldFontCharSet=703564880
+BoldFontIsBold=4
+BoldFontCharSet=0
 BoldFontHeight=0
 WideFont=""
-WideFontIsBold=0
-WideFontCharSet=703564880
-WideFontHeight=0
+WideFontIsBold=1
+WideFontCharSet=0
+WideFontHeight=10
 WideBoldFont=""
-WideBoldFontIsBold=0
-WideBoldFontCharSet=703564880
+WideBoldFontIsBold=35329240
+WideBoldFontCharSet=0
 WideBoldFontHeight=0
 ShadowBold=0
 ShadowBoldOffset=1
@@ -232,11 +251,27 @@ SerialStopHalfbits=2
 SerialParity=0
 SerialFlowControl=1
 WindowClass=""
+ConnectionSharing=0
+ConnectionSharingUpstream=1
+ConnectionSharingDownstream=1
+SSHManualHostKeys=""
 WakeupReconnect=0
 FailureReconnect=0
+AltMetaBit=0
+CtrlTabSwitch=0
+RightAltKey=0
+Use5Casis=0
+IconFile=""
+TermX=620
+TermY=157
+IgnoreChars=""
 HyperlinkEnable=1
 HyperlinkUnderline=1
 HyperlinkUseCtrlClick=1
+Alpha0="100,100"
+Alpha1="100,100"
+Alpha2="90,80"
+Alpha3="90,80"
 BackgroundWallpaper=0
 BackgroundEffect=0
 WallpaperFile=""
@@ -244,13 +279,25 @@ WallpaperPosition=0
 WallpaperAlign=0
 WallpaperVerticalAlign=0
 WallpaperMoving=0
-Alpha0="100,100"
-Alpha1="100,100"
-Alpha2="100,100"
-Alpha3="100,100"
-ClipModify=1500
-ClipQuery=1500
-BugWinadj=0
 AdbPort="transport-usb"
 AdbStart=1
 AdbKill=1
+RenderingMode=0
+BorderStyle=0
+Fps=60
+LineGap=0
+BaselineOffset=0
+BaselineOffsetFW=0
+FontStretch=0
+UseWideFont=1
+AltFont=""
+AltFontIsBold=4
+AltFontCharSet=0
+AltFontHeight=0
+UseAltFont=0
+Gamma=1800
+EnhancedContrast=50
+ClearTypeLevel=50
+BugResize=0
+ProxyLogToTerm=1
+BugOldGex2=0
